--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build:static": "cp -RT static ./dist",
     "build": "npm run build:js && npm run build:static",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "test": "jest",
     "serve": "serve dist"
   },
   "repository": {
@@ -21,6 +22,7 @@
   },
   "homepage": "https://github.com/fildon/shiny-measure#readme",
   "devDependencies": {
+    "@types/jest": "^27.0.2",
     "@types/luxon": "^2.0.5",
     "@types/react": "^17.0.27",
     "@types/react-dom": "^17.0.9",
@@ -29,13 +31,16 @@
     "esbuild": "^0.13.3",
     "esbuild-plugin-sass": "^0.6.0",
     "eslint": "^7.32.0",
+    "eslint-plugin-jest": "^25.2.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "govuk-frontend": "^3.14.0",
+    "jest": "^27.2.5",
     "luxon": "^2.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "sass": "^1.43.2",
     "serve": "^12.0.1",
+    "ts-jest": "^27.0.7",
     "typescript": "^4.4.4"
   }
 }
