--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "scripts": {
     "prebuild": "rm -rf dist",
     "build:js": "esbuild src/index.tsx --bundle --minify --outfile=dist/index.js",
+    "build:js:dev": "esbuild src/index.tsx --bundle --sourcemap --outfile=dist/index.js",
     "build:static": "cp -RT static ./dist",
     "build": "npm run build:js && npm run build:static",
+    "build:dev": "npm run build:js:dev && npm run build:static",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "test": "jest",
     "serve": "serve dist"
