--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Build
+name: Deploy
 on:
   push:
     branches: [main]
@@ -7,10 +7,8 @@ env:
   NODE_VERSION: "16.x"
 
 jobs:
-  build:
-    name: Build and Deploy
+  deploy:
     runs-on: ubuntu-latest
-    environment: production
     steps:
       - name: ⬇️ Checkout repo
         uses: actions/checkout@v2
