--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,13 +2,14 @@ name: Test
 on:
   pull_request:
     branches: [main]
+  push:
+    branches: [main]
 
 env:
   NODE_VERSION: "16.x"
 
 jobs:
   test:
-    name: Build and Test
     runs-on: ubuntu-latest
     steps:
       - name: ⬇️ Checkout repo
