--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
   },
   "homepage": "https://github.com/fildon/shiny-measure#readme",
   "devDependencies": {
+    "@chakra-ui/react": "^1.6.10",
+    "@emotion/react": "^11.5.0",
+    "@emotion/styled": "^11.3.0",
     "@types/jest": "^27.0.2",
     "@types/luxon": "^2.0.5",
     "@types/react": "^17.0.27",
@@ -38,6 +41,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "framer-motion": "^4.1.17",
     "govuk-frontend": "^3.14.0",
     "jest": "^27.2.5",
     "luxon": "^2.0.2",
