--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:static": "cp -RT static ./dist",
     "build": "npm run build:js && npm run build:static",
     "build:dev": "npm run build:js:dev && npm run build:static",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "lint": "eslint . --ext .ts,.tsx",
     "test": "jest",
     "serve": "serve dist"
   },
@@ -33,8 +33,11 @@
     "esbuild": "^0.13.3",
     "esbuild-plugin-sass": "^0.6.0",
     "eslint": "^7.32.0",
+    "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-jest": "^25.2.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.26.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "govuk-frontend": "^3.14.0",
     "jest": "^27.2.5",
     "luxon": "^2.0.2",
