--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "clean": "rm -rf dist",
     "build:js": "npm run clean && esbuild src/index.tsx --bundle --minify --outfile=dist/index.js",
     "build:js:dev": "npm run clean && esbuild src/index.tsx --bundle --sourcemap --outfile=dist/index.js",
-    "build:static": "cp -RT static ./dist",
+    "build:static": "cp -R static ./dist && mv dist/static/* ./dist && rm -d dist/static",
     "build": "npm run build:js && npm run build:static",
     "build:dev": "npm run build:js:dev && npm run build:static",
     "lint": "eslint . --ext .ts,.tsx",
