--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "luxon": "^2.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "recharts": "^2.1.6",
     "sass": "^1.43.2",
     "serve": "^12.0.1",
     "ts-jest": "^27.0.7",
