--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   },
   "homepage": "https://github.com/fildon/shiny-measure#readme",
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.15.0",
+    "@testing-library/react": "^12.1.2",
     "@types/jest": "^27.0.2",
     "@types/luxon": "^2.0.5",
     "@types/react": "^17.0.27",
@@ -47,6 +49,7 @@
     "sass": "^1.43.2",
     "serve": "^12.0.1",
     "ts-jest": "^27.0.7",
+    "ts-node": "^10.4.0",
     "typescript": "^4.4.4"
   }
 }
