--- a/package.json
+++ b/package.json
@@ -1,53 +1,28 @@
 {
   "name": "shiny-measure",
-  "version": "1.0.0",
-  "description": "A weight tracking webapp",
   "scripts": {
-    "clean": "shx rm -rf dist",
-    "build:js": "esbuild src/index.tsx src/serviceWorker.ts --bundle --minify --outdir=dist",
-    "build:static": "shx cp -R ./static/* ./dist",
-    "build": "npm run clean && npm run build:js && npm run build:static",
-    "lint": "eslint . --ext .ts,.tsx",
-    "test": "jest",
-    "serve": "serve dist"
+    "start": "parcel src/index.html",
+    "build": "parcel build src/index.html"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/fildon/shiny-measure.git"
-  },
-  "author": "Rupert Foggo McKay <maxfmckay@gmail.com> (https://fildon.me)",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/fildon/shiny-measure/issues"
-  },
-  "homepage": "https://github.com/fildon/shiny-measure#readme",
-  "devDependencies": {
-    "@testing-library/jest-dom": "^5.15.0",
-    "@testing-library/react": "^12.1.2",
-    "@types/jest": "^27.0.2",
-    "@types/luxon": "^2.0.5",
-    "@types/react": "^17.0.27",
-    "@types/react-dom": "^17.0.9",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "esbuild": "^0.13.3",
-    "esbuild-plugin-sass": "^0.6.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-jest": "^25.2.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.26.1",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "jest": "^27.2.5",
-    "luxon": "^2.0.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "recharts": "^2.1.6",
-    "sass": "^1.43.2",
-    "serve": "^12.0.1",
+  "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.2.1",
+    "@mui/material": "^6.2.1",
+    "@mui/x-charts": "^7.23.2",
+    "@types/luxon": "^3.4.2",
+    "@types/react": "^19.0.2",
+    "@types/react-dom": "^19.0.2",
+    "esbuild": "^0.24.2",
+    "luxon": "^3.5.0",
+    "parcel": "^2.13.3",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "serve": "^14.2.4",
     "shx": "^0.3.4",
-    "ts-jest": "^27.0.7",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.4.4"
+    "typescript": "^5.7.2"
+  },
+  "devDependencies": {
+    "process": "^0.11.10"
   }
 }
