--- a/package.json
+++ b/package.json
@@ -1,53 +1,34 @@
 {
-  "name": "shiny-measure",
-  "version": "1.0.0",
-  "description": "A weight tracking webapp",
+  "type": "module",
   "scripts": {
-    "clean": "shx rm -rf dist",
-    "build:js": "esbuild src/index.tsx src/serviceWorker.ts --bundle --minify --outdir=dist",
-    "build:static": "shx cp -R ./static/* ./dist",
-    "build": "npm run clean && npm run build:js && npm run build:static",
-    "lint": "eslint . --ext .ts,.tsx",
-    "test": "jest",
-    "serve": "serve dist"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/fildon/shiny-measure.git"
-  },
-  "author": "Rupert Foggo McKay <maxfmckay@gmail.com> (https://fildon.me)",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/fildon/shiny-measure/issues"
-  },
-  "homepage": "https://github.com/fildon/shiny-measure#readme",
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.15.0",
-    "@testing-library/react": "^12.1.2",
-    "@types/jest": "^27.0.2",
-    "@types/luxon": "^2.0.5",
-    "@types/react": "^17.0.27",
-    "@types/react-dom": "^17.0.9",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "esbuild": "^0.13.3",
-    "esbuild-plugin-sass": "^0.6.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-jest": "^25.2.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.26.1",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "jest": "^27.2.5",
-    "luxon": "^2.0.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "recharts": "^2.1.6",
-    "sass": "^1.43.2",
-    "serve": "^12.0.1",
-    "shx": "^0.3.4",
-    "ts-jest": "^27.0.7",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.4.4"
+    "@types/luxon": "^3.6.2",
+    "@types/node": "^22.15.14",
+    "@types/react": "^19.1.3",
+    "@types/react-dom": "^19.1.3",
+    "@vitejs/plugin-react": "^4.4.1",
+    "tw-animate-css": "^1.2.9",
+    "vite": "^6.3.5"
+  },
+  "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
+    "@radix-ui/react-dialog": "^1.1.13",
+    "@radix-ui/react-label": "^2.1.6",
+    "@radix-ui/react-slot": "^1.2.2",
+    "@tailwindcss/vite": "^4.1.5",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.507.0",
+    "luxon": "^3.6.1",
+    "react-dom": "^19.1.0",
+    "react-hook-form": "^7.56.2",
+    "recharts": "^2.15.3",
+    "tailwind-merge": "^3.2.0",
+    "tailwindcss": "^4.1.5",
+    "zod": "^3.24.4"
   }
 }
